<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B1913">

    <com.madinatti.app.ParticleView
        android:id="@+id/particleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="140dp"
            android:layout_height="95dp"
            android:src="@drawable/madinatilogopdf"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:lines="3"
            android:gravity="center"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choisir_langue"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:lineSpacingMultiplier="1.4"
            android:shadowColor="#40000000"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="7"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/btnArabic"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:text="@string/arabic"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:shadowColor="#40000000"
                android:shadowDx="7"
                android:shadowDy="7"
                android:shadowRadius="7"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/btnFrench"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:text="@string/francais"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:shadowColor="#40000000"
                android:shadowDx="7"
                android:shadowDy="7"
                android:shadowRadius="7"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/btnEnglish"
                android:layout_width="150dp"
                android:layout_height="42dp"
                android:text="@string/english"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:shadowColor="#40000000"
                android:shadowDx="7"
                android:shadowDy="7"
                android:shadowRadius="7" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnContinuer"
            android:layout_width="141dp"
            android:layout_height="42dp"
            android:text="@string/continuer"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:shadowColor="#40000000"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="7"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>