<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#4DFFFFFF"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingHorizontal="16dp"
            android:background="@drawable/bg_input"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.5"/>

        <FrameLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#4DFFFFFF"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="16dp"
                android:paddingEnd="44dp"
                android:background="@drawable/bg_input"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|end"
                android:padding="6dp"
                android:src="@drawable/ic_eye_closed"
                android:contentDescription="@string/app_name"
                app:tint="#7FA68A"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oublie"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:padding="6dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>